--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,9 @@ celery==5.3.4
 httpx==0.25.2
 aiohttp==3.9.1
 
+# AWS SDK
+boto3==1.34.0
+
 # Data processing and analysis
 pandas==2.1.3
 numpy==1.25.2
