week 3 END (Create embeddings using OpenAI embeddings or Hugging Face sentence transformers and Store in vector DB (Pinecone/Weaviate). Done

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,12 @@ spacy==3.7.2
 transformers==4.35.2
 torch==2.1.1
 tensorflow==2.15.0
+sentence-transformers==2.2.2
+openai>=1.30.0,<2
+
+# Vector databases
+pinecone-client==2.2.4
+weaviate-client==4.6.3
 
 # Threat intelligence specific
 cve-search==1.0.0
