--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,6 +45,24 @@ openai>=1.30.0,<2
 pinecone-client==2.2.4
 weaviate-client==4.6.3
 
+# LangChain and LangGraph for RAG
+langchain==0.1.0
+langchain-openai==0.0.5
+langchain-community==0.0.10
+langgraph==0.0.20
+langchain-core==0.1.10
+
+# Fine-tuning and ML Training
+datasets>=2.14.0
+accelerate>=0.24.0
+peft>=0.6.0
+trl>=0.7.4
+bitsandbytes>=0.41.0
+wandb>=0.16.0
+tensorboard>=2.15.0
+optuna>=3.4.0
+ray[tune]>=2.7.0
+
 # Threat intelligence specific
 cve-search==1.0.0
 stix2==3.0.1
