--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,329 +1,229 @@
-name: CI/CD Pipeline - Threat Intelligence Platform
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main, develop ]
+    tags: [ 'v*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 env:
-  AWS_REGION: us-east-1
-  ECR_REPOSITORY: threat-intelligence-platform
-  EKS_CLUSTER: threat-intelligence-cluster
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  # Test Backend
-  test-backend:
+  # Build and test all services
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.11]
+        node-version: [18]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Set up Python
+
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
-        cache: 'pip'
-    
-    - name: Install dependencies
+        python-version: ${{ matrix.python-version }}
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Cache Python dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Cache Node.js dependencies
+      uses: actions/cache@v3
+      with:
+        path: frontend/node_modules
+        key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Install Python dependencies
       run: |
         cd backend
         pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-    
-    - name: Run linting
+        pip install pytest pytest-cov flake8 black
+
+    - name: Install Node.js dependencies
+      run: |
+        cd frontend
+        npm ci
+
+    - name: Run Python linting
       run: |
         cd backend
+        flake8 app/ --count --select=E9,F63,F7,F82 --show-source --statistics
         black --check app/
-        isort --check-only app/
-        flake8 app/
-        mypy app/
-    
-    - name: Run tests
+
+    - name: Run Python tests
       run: |
         cd backend
-        pytest tests/ --cov=app --cov-report=xml --cov-report=html
-    
-    - name: Upload coverage to Codecov
+        pytest --cov=app --cov-report=xml
+
+    - name: Run Node.js linting
+      run: |
+        cd frontend
+        npm run lint
+
+    - name: Run Node.js tests
+      run: |
+        cd frontend
+        npm test -- --coverage --watchAll=false
+
+    - name: Upload coverage reports
       uses: codecov/codecov-action@v3
       with:
         file: ./backend/coverage.xml
         flags: backend
         name: backend-coverage
 
-  # Test Frontend
-  test-frontend:
+  # Build Docker images
+  build:
+    needs: test
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
-    
-    - name: Install dependencies
-      run: |
-        cd frontend
-        npm ci
-    
-    - name: Run linting
-      run: |
-        cd frontend
-        npm run lint
-    
-    - name: Run tests
-      run: |
-        cd frontend
-        npm test -- --coverage --watchAll=false
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./frontend/coverage/lcov.info
-        flags: frontend
-        name: frontend-coverage
+    strategy:
+      matrix:
+        include:
+          - service: api
+            dockerfile: backend/Dockerfile.api
+            context: ./backend
+            port: 8000
+          - service: ingestion
+            dockerfile: backend/Dockerfile.ingestion
+            context: ./backend
+            port: 8001
+          - service: worker
+            dockerfile: backend/Dockerfile.worker
+            context: ./backend
+            port: null
+          - service: dashboard-dev
+            dockerfile: frontend/Dockerfile.development
+            context: ./frontend
+            port: 3000
+          - service: dashboard-prod
+            dockerfile: frontend/Dockerfile.production
+            context: ./frontend
+            port: 3000
 
-  # Security Scanning
-  security-scan:
-    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Run Snyk security scan
-      uses: snyk/actions/python@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container Registry
+      if: github.event_name == 'push'
+      uses: docker/login-action@v3
       with:
-        args: --severity-threshold=high --file=backend/requirements.txt
-    
-    - name: Run Snyk container scan
-      uses: snyk/actions/docker@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
       with:
-        image: threat-intelligence-backend:latest
-        args: --severity-threshold=high
-    
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.service }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=sha,prefix={{branch}}-
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ${{ matrix.context }}
+        file: ${{ matrix.dockerfile }}
+        push: ${{ github.event_name == 'push' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+  # Security scan
+  security:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: 'threat-intelligence-backend:latest'
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-api:${{ github.sha }}
         format: 'sarif'
         output: 'trivy-results.sarif'
-    
-    - name: Upload Trivy scan results
+
+    - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v2
+      if: always()
       with:
         sarif_file: 'trivy-results.sarif'
 
-  # Build Docker Images
-  build:
-    needs: [test-backend, test-frontend, security-scan]
+  # Deploy to staging
+  deploy-staging:
+    needs: [build, security]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-    
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
-    
-    - name: Build and push backend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./backend
-        push: true
-        tags: |
-          ${{ steps.login-ecr.outputs.registry }}/threat-intelligence-backend:${{ github.sha }}
-          ${{ steps.login-ecr.outputs.registry }}/threat-intelligence-backend:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
-    
-    - name: Build and push frontend image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./frontend
-        push: true
-        tags: |
-          ${{ steps.login-ecr.outputs.registry }}/threat-intelligence-frontend:${{ github.sha }}
-          ${{ steps.login-ecr.outputs.registry }}/threat-intelligence-frontend:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
+    environment: staging
 
-  # Deploy to Development
-  deploy-dev:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
-    environment: development
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-    
-    - name: Update kubeconfig
-      run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }}-dev --region ${{ env.AWS_REGION }}
-    
-    - name: Deploy to development
-      run: |
-        # Update image tags in Kubernetes manifests
-        sed -i "s|IMAGE_TAG|${{ github.sha }}|g" k8s/dev/*.yaml
-        
-        # Apply manifests
-        kubectl apply -f k8s/dev/
-        
-        # Wait for deployment to be ready
-        kubectl rollout status deployment/threat-intelligence-backend -n threat-intel-dev
-        kubectl rollout status deployment/threat-intelligence-frontend -n threat-intel-dev
 
-  # Deploy to Production
-  deploy-prod:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-    
-    - name: Update kubeconfig
-      run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }}-prod --region ${{ env.AWS_REGION }}
-    
-    - name: Deploy to production
+    - name: Deploy to staging
       run: |
-        # Update image tags in Kubernetes manifests
-        sed -i "s|IMAGE_TAG|${{ github.sha }}|g" k8s/prod/*.yaml
-        
-        # Apply manifests
-        kubectl apply -f k8s/prod/
-        
-        # Wait for deployment to be ready
-        kubectl rollout status deployment/threat-intelligence-backend -n threat-intel-prod
-        kubectl rollout status deployment/threat-intelligence-frontend -n threat-intel-prod
-    
+        echo "Deploying to staging environment..."
+        # Add your staging deployment commands here
+        # Example: kubectl apply -f k8s/staging/
+        # Example: docker-compose -f docker-compose.services.yml up -d
+
     - name: Run smoke tests
       run: |
-        # Wait for services to be ready
-        sleep 30
-        
-        # Test backend health endpoint
-        curl -f http://backend.threat-intel-prod.svc.cluster.local/health
-        
-        # Test frontend
-        curl -f http://frontend.threat-intel-prod.svc.cluster.local/
+        echo "Running smoke tests..."
+        # Add your smoke test commands here
+        # Example: curl -f http://staging-api.example.com/health
 
-  # Infrastructure as Code
-  terraform:
+  # Deploy to production
+  deploy-production:
+    needs: [build, security]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push'
+    environment: production
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: '1.5.0'
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-    
-    - name: Terraform Init
-      run: |
-        cd infrastructure/terraform
-        terraform init
-    
-    - name: Terraform Plan
-      run: |
-        cd infrastructure/terraform
-        terraform plan -out=tfplan
-    
-    - name: Terraform Apply
-      run: |
-        cd infrastructure/terraform
-        terraform apply tfplan
 
-  # Performance Testing
-  performance-test:
-    needs: deploy-prod
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install locust
-      run: pip install locust
-    
-    - name: Run performance tests
+    - name: Deploy to production
       run: |
-        cd tests/performance
-        locust -f locustfile.py --host=https://api.threat-intelligence.com --users 100 --spawn-rate 10 --run-time 5m --headless
-    
-    - name: Upload performance results
-      uses: actions/upload-artifact@v3
-      with:
-        name: performance-results
-        path: tests/performance/results/
+        echo "Deploying to production environment..."
+        # Add your production deployment commands here
+        # Example: kubectl apply -f k8s/production/
+        # Example: docker-compose -f docker-compose.services.yml --profile production up -d
 
-  # Notifications
-  notify:
-    needs: [deploy-prod, performance-test]
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-    - name: Notify Slack on success
-      if: success()
-      uses: 8398a7/action-slack@v3
-      with:
-        status: success
-        webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-        text: '✅ Threat Intelligence Platform deployed successfully!'
-    
-    - name: Notify Slack on failure
-      if: failure()
-      uses: 8398a7/action-slack@v3
-      with:
-        status: failure
-        webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-        text: '❌ Threat Intelligence Platform deployment failed!' 
+    - name: Run production tests
+      run: |
+        echo "Running production tests..."
+        # Add your production test commands here
+        # Example: curl -f http://api.example.com/health 
