--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,86 +1,39 @@
-# FastAPI and web framework
+# FastAPI and core dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-
-# Database
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-asyncpg==0.29.0
-
-# Authentication and security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-decouple==3.8
-
-# Redis and caching
-redis==5.0.1
-celery==5.3.4
-
-# HTTP client for external APIs
-httpx==0.25.2
-aiohttp==3.9.1
-
-# AWS SDK
-boto3==1.34.0
-
-# Data processing and analysis
-pandas==2.1.3
-numpy==1.25.2
 pydantic==2.5.0
 pydantic-settings==2.1.0
 
+# Database
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+
+# Authentication and security
+boto3==1.34.0
+botocore==1.34.0
+requests==2.31.0
+cryptography==41.0.8
+
 # AI/ML libraries
+numpy==1.24.3
+pandas==2.0.3
 scikit-learn==1.3.2
-nltk==3.8.1
-spacy==3.7.2
-transformers==4.35.2
-torch==2.1.1
 tensorflow==2.15.0
-sentence-transformers==2.2.2
-openai>=1.30.0,<2
+torch==2.1.1
+transformers==4.36.2
+openai==1.3.7
 
-# Vector databases
-pinecone-client==2.2.4
-weaviate-client==4.6.3
-
-# LangChain and LangGraph for RAG
-langchain==0.1.0
-langchain-openai==0.0.5
-langchain-community==0.0.10
-langgraph==0.0.20
-langchain-core==0.1.10
-
-# Fine-tuning and ML Training
-datasets>=2.14.0
-accelerate>=0.24.0
-peft>=0.6.0
-trl>=0.7.4
-bitsandbytes>=0.41.0
-wandb>=0.16.0
-tensorboard>=2.15.0
-optuna>=3.4.0
-ray[tune]>=2.7.0
-
-# Threat intelligence specific
-cve-search==1.0.0
-stix2==3.0.1
-taxii2-client==2.3.0
+# Data processing and visualization
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.17.0
+jupyter==1.0.0
 
 # Utilities
-python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
-loguru==0.7.2
-click==8.1.7
-
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2
-
-# Development
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1 
+python-dateutil==2.8.2 
